xa/__eclipse/xa/target/generated-sources/antlr4/xcom/retro/xa/antlr/processors/MOS6502/MOS6502_Parser.java
// Generated from MOS6502_.g4 by ANTLR 4.13.2
package xcom.retro.xa.antlr.processors.MOS6502;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class MOS6502_Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, BranchOpcodes=30, Opcodes=31, 
		Directives=32, BinaryLiteral=33, OctalLiteral=34, DecimalLiteral=35, HexLiteral=36, 
		CharacterLiteral=37, StringLiteral=38, Identifier=39, Comment=40, EOL=41, 
		WS=42;
	public static final int
		RULE_assembly = 0, RULE_statement = 1, RULE_label = 2, RULE_instruction = 3, 
		RULE_branchOpcode = 4, RULE_opcode = 5, RULE_branchAddressingMode = 6, 
		RULE_addressingMode = 7, RULE_absolute = 8, RULE_accumulator = 9, RULE_immediate = 10, 
		RULE_implied = 11, RULE_indexedX = 12, RULE_indexedY = 13, RULE_indirect = 14, 
		RULE_zpIndirectX = 15, RULE_zpIndirectY = 16, RULE_relative = 17, RULE_directive = 18, 
		RULE_assembler = 19, RULE_macro = 20, RULE_invocation = 21, RULE_directives = 22, 
		RULE_argumentList = 23, RULE_argument = 24, RULE_optionList = 25, RULE_option = 26, 
		RULE_parameterList = 27, RULE_parameter = 28, RULE_assignment = 29, RULE_symbol = 30, 
		RULE_expr = 31, RULE_term = 32, RULE_org = 33, RULE_identifier = 34, RULE_binary = 35, 
		RULE_comparison = 36, RULE_unary = 37, RULE_integerAdd = 38, RULE_integerSubtract = 39, 
		RULE_integerMultiply = 40, RULE_integerDivide = 41, RULE_bitwiseShiftLeft = 42, 
		RULE_bitwiseShiftRight = 43, RULE_bitwiseAnd = 44, RULE_bitwiseOr = 45, 
		RULE_logicalAnd = 46, RULE_logicalOr = 47, RULE_equal = 48, RULE_notEqual = 49, 
		RULE_lessThan = 50, RULE_greaterThan = 51, RULE_plus = 52, RULE_minus = 53, 
		RULE_highByte = 54, RULE_lowByte = 55, RULE_logicalNot = 56, RULE_literal = 57, 
		RULE_numericLiteral = 58, RULE_alphanumericLiteral = 59, RULE_binaryLiteral = 60, 
		RULE_octalLiteral = 61, RULE_decimalLiteral = 62, RULE_hexLiteral = 63, 
		RULE_characterLiteral = 64, RULE_stringLiteral = 65, RULE_eol = 66;
	private static String[] makeRuleNames() {
		return new String[] {
			"assembly", "statement", "label", "instruction", "branchOpcode", "opcode", 
			"branchAddressingMode", "addressingMode", "absolute", "accumulator", 
			"immediate", "implied", "indexedX", "indexedY", "indirect", "zpIndirectX", 
			"zpIndirectY", "relative", "directive", "assembler", "macro", "invocation", 
			"directives", "argumentList", "argument", "optionList", "option", "parameterList", 
			"parameter", "assignment", "symbol", "expr", "term", "org", "identifier", 
			"binary", "comparison", "unary", "integerAdd", "integerSubtract", "integerMultiply", 
			"integerDivide", "bitwiseShiftLeft", "bitwiseShiftRight", "bitwiseAnd", 
			"bitwiseOr", "logicalAnd", "logicalOr", "equal", "notEqual", "lessThan", 
			"greaterThan", "plus", "minus", "highByte", "lowByte", "logicalNot", 
			"literal", "numericLiteral", "alphanumericLiteral", "binaryLiteral", 
			"octalLiteral", "decimalLiteral", "hexLiteral", "characterLiteral", "stringLiteral", 
			"eol"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'A'", "'#'", "','", "'X'", "'Y'", "'['", "']'", "'.'", "'.macro'", 
			"'='", "'('", "')'", "'*'", "'<='", "'>='", "'+'", "'-'", "'/'", "'<<'", 
			"'>>'", "'&'", "'|'", "'&&'", "'||'", "'=='", "'!='", "'<'", "'>'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "BranchOpcodes", "Opcodes", "Directives", 
			"BinaryLiteral", "OctalLiteral", "DecimalLiteral", "HexLiteral", "CharacterLiteral", 
			"StringLiteral", "Identifier", "Comment", "EOL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MOS6502_.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MOS6502_Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssemblyContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MOS6502_Parser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<EolContext> eol() {
			return getRuleContexts(EolContext.class);
		}
		public EolContext eol(int i) {
			return getRuleContext(EolContext.class,i);
		}
		public AssemblyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assembly; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterAssembly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitAssembly(this);
		}
	}

	public final AssemblyContext assembly() throws RecognitionException {
		AssemblyContext _localctx = new AssemblyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_assembly);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2752000295680L) != 0)) {
				{
				{
				setState(134);
				statement();
				setState(135);
				eol();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(144);
				label();
				}
				break;
			case 2:
				{
				setState(145);
				instruction();
				}
				break;
			case 3:
				{
				{
				setState(146);
				label();
				setState(147);
				instruction();
				}
				}
				break;
			case 4:
				{
				setState(149);
				directive();
				}
				break;
			case 5:
				{
				{
				setState(150);
				label();
				setState(151);
				directive();
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(MOS6502_Parser.Identifier, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitLabel(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public BranchOpcodeContext branchOpcode() {
			return getRuleContext(BranchOpcodeContext.class,0);
		}
		public BranchAddressingModeContext branchAddressingMode() {
			return getRuleContext(BranchAddressingModeContext.class,0);
		}
		public OpcodeContext opcode() {
			return getRuleContext(OpcodeContext.class,0);
		}
		public AddressingModeContext addressingMode() {
			return getRuleContext(AddressingModeContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruction);
		try {
			setState(163);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BranchOpcodes:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(157);
				branchOpcode();
				setState(158);
				branchAddressingMode();
				}
				}
				break;
			case Opcodes:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(160);
				opcode();
				setState(161);
				addressingMode();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BranchOpcodeContext extends ParserRuleContext {
		public TerminalNode BranchOpcodes() { return getToken(MOS6502_Parser.BranchOpcodes, 0); }
		public BranchOpcodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_branchOpcode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterBranchOpcode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitBranchOpcode(this);
		}
	}

	public final BranchOpcodeContext branchOpcode() throws RecognitionException {
		BranchOpcodeContext _localctx = new BranchOpcodeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_branchOpcode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(BranchOpcodes);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OpcodeContext extends ParserRuleContext {
		public TerminalNode Opcodes() { return getToken(MOS6502_Parser.Opcodes, 0); }
		public OpcodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opcode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterOpcode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitOpcode(this);
		}
	}

	public final OpcodeContext opcode() throws RecognitionException {
		OpcodeContext _localctx = new OpcodeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_opcode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(Opcodes);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BranchAddressingModeContext extends ParserRuleContext {
		public RelativeContext relative() {
			return getRuleContext(RelativeContext.class,0);
		}
		public BranchAddressingModeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_branchAddressingMode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterBranchAddressingMode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitBranchAddressingMode(this);
		}
	}

	public final BranchAddressingModeContext branchAddressingMode() throws RecognitionException {
		BranchAddressingModeContext _localctx = new BranchAddressingModeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_branchAddressingMode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			relative();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AddressingModeContext extends ParserRuleContext {
		public AbsoluteContext absolute() {
			return getRuleContext(AbsoluteContext.class,0);
		}
		public AccumulatorContext accumulator() {
			return getRuleContext(AccumulatorContext.class,0);
		}
		public ImmediateContext immediate() {
			return getRuleContext(ImmediateContext.class,0);
		}
		public ImpliedContext implied() {
			return getRuleContext(ImpliedContext.class,0);
		}
		public IndexedXContext indexedX() {
			return getRuleContext(IndexedXContext.class,0);
		}
		public IndexedYContext indexedY() {
			return getRuleContext(IndexedYContext.class,0);
		}
		public IndirectContext indirect() {
			return getRuleContext(IndirectContext.class,0);
		}
		public ZpIndirectXContext zpIndirectX() {
			return getRuleContext(ZpIndirectXContext.class,0);
		}
		public ZpIndirectYContext zpIndirectY() {
			return getRuleContext(ZpIndirectYContext.class,0);
		}
		public RelativeContext relative() {
			return getRuleContext(RelativeContext.class,0);
		}
		public AddressingModeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addressingMode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterAddressingMode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitAddressingMode(this);
		}
	}

	public final AddressingModeContext addressingMode() throws RecognitionException {
		AddressingModeContext _localctx = new AddressingModeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_addressingMode);
		try {
			setState(181);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(171);
				absolute();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(172);
				accumulator();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(173);
				immediate();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(174);
				implied();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(175);
				indexedX();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(176);
				indexedY();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(177);
				indirect();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(178);
				zpIndirectX();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(179);
				zpIndirectY();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(180);
				relative();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AbsoluteContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public AbsoluteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_absolute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterAbsolute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitAbsolute(this);
		}
	}

	public final AbsoluteContext absolute() throws RecognitionException {
		AbsoluteContext _localctx = new AbsoluteContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_absolute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			argument();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AccumulatorContext extends ParserRuleContext {
		public AccumulatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accumulator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterAccumulator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitAccumulator(this);
		}
	}

	public final AccumulatorContext accumulator() throws RecognitionException {
		AccumulatorContext _localctx = new AccumulatorContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_accumulator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImmediateContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public ImmediateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_immediate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterImmediate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitImmediate(this);
		}
	}

	public final ImmediateContext immediate() throws RecognitionException {
		ImmediateContext _localctx = new ImmediateContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_immediate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(T__1);
			setState(188);
			argument();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImpliedContext extends ParserRuleContext {
		public ImpliedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_implied; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterImplied(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitImplied(this);
		}
	}

	public final ImpliedContext implied() throws RecognitionException {
		ImpliedContext _localctx = new ImpliedContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_implied);
		try {
			enterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IndexedXContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public IndexedXContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_indexedX; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterIndexedX(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitIndexedX(this);
		}
	}

	public final IndexedXContext indexedX() throws RecognitionException {
		IndexedXContext _localctx = new IndexedXContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_indexedX);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			argument();
			setState(193);
			match(T__2);
			setState(194);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IndexedYContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public IndexedYContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_indexedY; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterIndexedY(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitIndexedY(this);
		}
	}

	public final IndexedYContext indexedY() throws RecognitionException {
		IndexedYContext _localctx = new IndexedYContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_indexedY);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			argument();
			setState(197);
			match(T__2);
			setState(198);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IndirectContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public IndirectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_indirect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).enterIndirect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOS6502_Listener ) ((MOS6502_Listener)listener).exitIndirect(this);
		}
	}
